examples/fail/semantic/impl_wrong_self_name.bina
// EXPECT_SEMANTIC_ERROR: first method parameter must be named 'self'
struct Point {
    pub x: int32;
}

impl Point {
    fn value(this: Point) -> int32 {
        return this.x;
    }
}

fn main() -> int {
    return 0;
}
